# Rust-Libraries

./: README.md
AI-Batch-Queue/: Cargo.toml  README.md
AI-Batch-Queue/examples/: basic_batch.rs  eta_tracking.rs  model_optimization.rs
AI-Batch-Queue/src/: eta.rs  executor.rs  lib.rs  queue.rs  types.rs
AI-Batch-Queue/tests/: integration_tests.rs
ComfyUI-RS/: Cargo.toml  README.md
ComfyUI-RS/examples/: progress_tracking.rs  simple_generation.rs  workflow_builder.rs
ComfyUI-RS/src/: client.rs  error.rs  lib.rs  types.rs  workflow.rs
LLM-Pipeline/: Cargo.toml  README.md
LLM-Pipeline/src/: client.rs  error.rs  lib.rs  pipeline.rs  prompt.rs
LLM-Pipeline/tests/: integration_tests.rs
Ollama-Vision-RS/: Cargo.toml  README.md
Ollama-Vision-RS/examples/: caption_images.rs  tag_images.rs  thinking_mode.rs
Ollama-Vision-RS/src/: captioner.rs  lib.rs  parser.rs  tagger.rs  types.rs
Tauri-Queue/: Cargo.toml  README.md
Tauri-Queue/examples/: basic_usage.rs  with_cancellation.rs  with_cooldown.rs  with_persistence.rs
Tauri-Queue/src/: config.rs  db.rs  error.rs  events.rs  executor.rs  lib.rs  queue.rs  types.rs
Tauri-Queue/tests/: integration_tests.rs  test_helpers.rs
Tauri-React-Hooks/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
Tauri-React-Hooks/examples/: demo-usage.md
Tauri-React-Hooks/src/: index.ts  types.ts  useBufferedStream.ts  useTauriConfig.ts  useTauriEvent.ts  useTauriEvents.ts  useTauriMutation.ts  useTauriQuery.ts
