[package]
name = "comfyui-rs"
version = "0.1.0"
edition = "2021"
authors = ["Josh"]
license = "MIT"
description = "Async Rust client for ComfyUI — REST, WebSocket progress, and workflow building"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
