[package]
name = "ollama-vision"
version = "0.1.0"
edition = "2021"
description = "Robust Ollama vision model toolkit for image tagging and captioning"
license = "MIT"
keywords = ["ollama", "vision", "tagging", "captioning", "llm"]
categories = ["api-bindings", "multimedia::images"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
