[package]
name = "tauri-queue"
version = "0.1.0"
edition = "2021"
authors = ["Josh"]
license = "MIT"
description = "Production-grade background job queue system for Tauri applications"
repository = "https://github.com/yourusername/tauri-queue"
keywords = ["tauri", "queue", "jobs", "background-processing", "async"]
categories = ["asynchronous", "database"]

[dependencies]
tauri = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["sqlite"]
sqlite = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_cooldown"
path = "examples/with_cooldown.rs"

[[example]]
name = "with_cancellation"
path = "examples/with_cancellation.rs"

[[example]]
name = "with_persistence"
path = "examples/with_persistence.rs"
